--- a/Clase 2/tables.html
+++ b/Clase 2/tables.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-    <table border="1">
+    <table border="1" style="border-collapse: collapse; width: 30%;">
         <tr>
             <th>Nombre</th>
             <th>edad</th>
@@ -18,9 +18,11 @@
         </tr>
         <tr>
             <td>Maria</td>
-            <td>30</td>
+            <td>30 años</td>
         </tr>
     </table>
+
+    <br>
 
     <table border="1" style="border-collapse: collapse; width: 50%;">
         <tr style="background-color: lightgrey">
