--- a/Clase 3/actividad.html
+++ b/Clase 3/actividad.html
@@ -8,14 +8,22 @@
 
         <!--Estilo interno-->
         <style>
-            section {
+            section{
                 background-color: lightsalmon;
                 margin: 0;
                 padding: 40px;
             }
 
             h2{
-                margin: 10px;
+                margin: 100px;
+            }
+
+            p{
+                margin: 0 auto;
+                background: red;
+                color: white;
+                width: 400px;
+                text-align: center;
             }
 
             h2 {
@@ -26,7 +34,7 @@
     <body>
         
         <!--Estilo inline (en linea)-->
-        <h1 style="color: blue; text-align: center; background-color: darkseagreen;">Contenido personalizable</h1>
+        <h1 style="color: blue; text-align: center; background-color: darkseagreen;"> Contenido personalizable </h1>
 
         <!--Estilo interno-->
         <section>
@@ -43,6 +51,9 @@
             <p id="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus reprehenderit recusandae libero officia distinctio debitis iure minima. Quis aperiam voluptates tempore quisquam doloribus commodi distinctio ducimus, laboriosam aspernatur, voluptatibus ullam.</p>
         </article>
 
+        <article class="articulo">
+
+        </article>
 
     </body>
 </html>
