--- a/Clase 7/calculadora/index.html
+++ b/Clase 7/calculadora/index.html
@@ -8,17 +8,28 @@
 </head>
 <body>
 
-    <h1>Calculadora basica funcional</h1>
-    <input type="number" id="numero1" placeholder="Primer número">
-    <input type="number" id="numero2" placeholder="Segundo número">
+    <header>
+        <h1>Calculadora basica funcional</h1>
+    </header>
+    
+    <section class="display">
+        <p id="resultado">Introduce los numeros y la operación</p>
+    </section>
+
+    <section class="numeros">
+        <input type="number" id="numero1" placeholder="Primer número">
+        <input type="number" id="numero2" placeholder="Segundo número">
+    </section>
 
     <br>
     <br>
 
-    <button onclick="sumar()">Sumar</button>
-    <button onclick="resta()">Resta</button>
-
-    <p id="resultado"></p>
+    <section class="operaciones">
+        <button onclick="sumar()">Sumar</button>
+        <button onclick="resta()">Resta</button>
+        <button onclick="multi()">Multiplicar</button>
+        <button onclick="divi()">Dividir</button>
+    </section>
 
     <script src="./script.js"></script>
 </body>
